# libviper

./: .gitignore  CHANGELOG  CMakeCache.txt  CMakeLists.txt  INSTALL  KLASSES.md  LICENSE  Makefile  README.md  TODO  VDK_CHANGELOG  cmake_install.cmake  install_manifest.txt  klasses.txt  libvdk.so.1  libvdk.so.1.0.0  libviper.pc  list.h  private.h  sgr_probe.c  strings.c  strings.h  vdk.h  vdk_color.c  vdk_color.h  viper.h  viper_callbacks.c  viper_callbacks.h  viper_color.c  viper_color.h  viper_deck.c  viper_deck.h  viper_events.c  viper_events.h  viper_filedlg.c  viper_filedlg.h  viper_forms.c  viper_gpm.def  viper_keyboard.c  viper_kmio.c  (+61 more)
demo/: CMakeLists.txt  Makefile  cmake_install.cmake  vk_demo  vk_demo.c  vk_viewport_demo.c
vdk/: CREDITS  Makefile  klasses.txt  vdk.h  vdk_color.c  vdk_container.c  vdk_container.h  vdk_context.c  vdk_context.h  vdk_events.h  vdk_label.c  vdk_label.h  vdk_object.c  vdk_object.h  vdk_private.c  vdk_private.h  vdk_screen.c  vdk_screen.h  vdk_surface.c  vdk_surface.h  vdk_widget.c  vdk_widget.h  vdk_window.c  vdk_window.h  vk_activity.c  vk_activity.h  vk_box.c  vk_box.h  vk_button.c  vk_button.h  vk_calendar.c  vk_calendar.h  vk_color.c  vk_color.h  vk_container.c  vk_deck.c  vk_deck.h  vk_dropdown.c  vk_dropdown.h  vk_event.h  (+44 more)
vdk/priv/: klass_container.h  klass_context.h  klass_label.h  klass_object.h  klass_screen.h  klass_surface.h  klass_widget.h  klass_window.h
vdk/test/: Makefile  colors  colors.c  metrics  metrics.c  pausing  pausing.c  widgets  widgets.c
vkmio/: vk_dblclick.c  vk_dblclick.h  vk_drag.c  vk_drag.h  vk_kmio.c  vk_kmio.h  vk_zone.c  vk_zone.h  vkmio.h
